--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ a.two:link {color: #564c4d; text-decoration: none;}
 a.two:visited {color: #564c4d; text-decoration: none;}
 a.two:hover {color: #447EAE; text-decoration: none;}
 	    
-	.content { font-family:verdana; font-size:12px; color:#564c4d; width:850px; text-align:left; }
+	.content { font-family:verdana; font-size:12px; font-size: 5.4vw; color:#564c4d; width:850px; text-align:left; }
 	.headline { font-family:verdana; font-size:22px; color:#564c4d; width:850px; text-align:left; }
 	.datestamp { font-family:verdana; font-size:10px; color:#564c4d; width:850px; text-align:left; }
 	.imagecaption { font-style: italic; }
