--- a/index.html
+++ b/index.html
@@ -56,11 +56,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 
 
 
-@media (max-width: 480px) {
-  .text {
-    font-size: 16px;
-  }
-}
+@media screen and (max-width:769px){body{font-size:16px;}}
       </style>
     
   </head>
