--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 
 
 @media screen and (max-width:769px){body{font-size:16px;}}
+
+	    @media screen and (max-width: 600px) {
+  body {
+    background-color: olive;
+  }
+	,indextable td { font-family:verdana; font-size:20px; ; color:#564c4d; }	    
+}
       </style>
     
   </head>
