--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   body {
     background-color: olive;
   }
-	,indextable td { font-family:verdana; font-size:20px; ; color:#564c4d; }	    
+	.indextable td { font-family:verdana; font-size:20px; ; color:#564c4d; }	    
 }
       </style>
     
