--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 
 	    @media screen and (max-width: 600px) {
   body {
-    background-color: olive;
-  }
-	.indextable td { font-family:verdana; font-size:20px; ; color:#564c4d; }	    
+    background-color: olive; font-size:20px;
+  }    
 }
       </style>
     
