--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       body{
         margin: 0px;
         padding: 0px;
+	      background-color: blue
     }
  
 h1 {
@@ -66,13 +67,6 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   
   <body>
 
- <script>
-    function getResolution() {
-        alert("Your screen resolution is: " + screen.width + "x" + screen.height);
-    }
-    </script>
-     
-    <button type="button" onclick="getResolution();">Get Resolution</button>
 	  
     <table style='width:100%; padding:0px; border-collapse: collapse;'>
       <tr><td style='height:25px; color:#564c4d; width:50%; font-size:25px; font-family:Montserrat, sans-serif; text-align:left;'><a href='index.html' class=dropbtn><img src='giraffe3.png' style='height:55px; padding:10px; vertical-align:middle; border:0px;'>Graph and PowerShell Blog</a></td>
