--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 
 	    @media screen and (max-width: 700px) {
   body {
-    background-color: olive; font-size:20px;
+    font-size:20px;
   }    
+	.indexTable td { font-family:verdana; font-size:20px; ; color:#564c4d; }	    
 }
       </style>
     
