--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   body {
     font-size:20px;
   }    
-	.indexTable td { font-family:verdana; font-size:20px; ; color:#564c4d; }	    
+	.indexTable td { font-family:verdana; font-size:22px; ; color:#564c4d; }	
+	.content { font-family:verdana; font-size:22px; ; color:#564c4d; width:850px; text-align:left; }
 }
       </style>
     
