--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   }    
 	.indexTable td { font-family:verdana; font-size:22px; ; color:#564c4d; }	
 	.content { font-family:verdana; font-size:22px; ; color:#564c4d; width:850px; text-align:left; }
+	.headline { font-family:verdana; font-size:30px; color:#564c4d; width:850px; text-align:left; }
 }
       </style>
     
