--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
 		  <b>2024</b><br>
+	  <a href="integratedApps.html" class=two>O365 Integrated Apps troubleshooting</a>
 	  <a href="DominoO365.html" class=two>Domino and O365 Co-existence</a><br>
 	  <a href="ADdelegate.html" class=two>Delegate Control in AD</a><br>
 	  <a href="hverelay.html" class=two>App mail relay via HVE</a><br>
@@ -131,6 +132,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <div class=headline>Articles</div>
 	      <table class=indexTable> 
 		      <br>
+	<tr><td><a href="integratedApps.html" class=two>O365 Integrated Apps troubleshooting</a><br></td><td>28-May-24</td></tr>
 	<tr><td><a href="DominoO365.html" class=two>Domino and O365 Co-existence</a><br></td><td>25-May-24</td></tr>
 	<tr><td><a href="ADdelegate.html" class=two>Delegate Control in AD</a><br></td><td>22-May-24</td></tr>
 	<tr><td><a href="hverelay.html" class=two>App mail relay via HVE</a><br></td><td>22-May-24</td></tr>
