--- a/integratedApps.html
+++ b/integratedApps.html
@@ -148,7 +148,7 @@ Next, we need to make the add-in available for users. We'll need the 'Exchange A
 <img src=integratedApps02.png class=ImageMain>
 		<div class=ImageCaption>↑ We can see here our app is set to 'Available', so users must install it themselves.</div>
           <br>
-With the app deployed and installed by users, we can now focus on setting up what the add-in does when a user reports a mail within Outlook. This is set under <a href='https://security.microsoft.com/securitysettings/userSubmission?tid=ce71ecf0-0b97-47b2-966c-b4ecc8db23f2'>Microsoft Defender</a> in O365. First we define that we want to use the Microsoft add-in and not a 3rd party.<br>
+With the app deployed and installed by users, we can now focus on setting up what the add-in does when a user reports a mail within Outlook. This is set under <a href='https://security.microsoft.com/'>Microsoft Defender - Settings - Email & collaboration</a> in O365. First, we define that we want to use the Microsoft add-in and not a 3rd party.<br>
           <br>
 <img src=integratedApps03.png class=ImageMain>
 		<div class=ImageCaption>↑ We have selected to use the Microsoft add-in.</div>
