--- a/integratedApps.html
+++ b/integratedApps.html
@@ -78,7 +78,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <b>2024</b><br>
-	  <a href="integratedApps.html" class=two>O365 Integrated Apps troubleshooting</a>
+	  <a href="integratedApps.html" class=two>O365 Integrated Apps troubleshooting</a><br>
 	    <a href="DominoO365.html" class=two>Domino and O365 Co-existence</a><br>
 	    <a href="ADdelegate.html" class=two>Delegate Control in AD</a><br>
 	  <a href="hverelay.html" class=two>App mail relay via HVE</a><br>
