--- a/postfixRelay.html
+++ b/postfixRelay.html
@@ -151,7 +151,7 @@ The most common choice is to set up an Ubuntu server with Postfix and then have 
             TBC
           </div>
         <br>
-          What clients can relay via the server can be restricted by IP, this is important because the connector to O365 is an open relay, with some filtering in place.<br>
+          What apps can relay via the server can be restricted by IP, this is important because the connector to O365 is an open relay, with some filtering in place.<br>
           <br>
           At this point, I'm waiting on the firewall admin to put the rule in place for testing and the 3rd party certificate to be purchased. Once these are in place I will add a new hostname that apps can connect to for testing.<br>
           <br>
