--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
 		  <b>2024</b><br>
+	  <a href="upgradePHP.html" class=two>Upgrading PHP on Windows</a><br>
 	  <a href="postfixRelay.html" class=two>Adding a Postfix server for relay to O365</a><br>
 	  <a href="integratedApps.html" class=two>O365 Integrated Apps troubleshooting</a><br>
 	  <a href="DominoO365.html" class=two>Domino and O365 Co-existence</a><br>
@@ -133,6 +134,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <div class=headline>Articles</div>
 	      <table class=indexTable> 
 		      <br>
+	<tr><td><a href="upgradePHP.html" class=two>Upgrading PHP on Windows</a><br></td><td>10-Jun-24</td></tr>
 	<tr><td><a href="postfixRelay.html" class=two>Adding a Postfix server for relay to O365</a><br></td><td>08-Jun-24</td></tr>
 	<tr><td><a href="integratedApps.html" class=two>O365 Integrated Apps troubleshooting</a><br></td><td>28-May-24</td></tr>
 	<tr><td><a href="DominoO365.html" class=two>Domino and O365 Co-existence</a><br></td><td>25-May-24</td></tr>
