--- a/upgradePHP.html
+++ b/upgradePHP.html
@@ -138,8 +138,16 @@ To upgrade PHP on Windows you need to do the following:<br>
           1. Download the new Windows package from <a href='https://www.php.net/'>php.net</a>.<br>
           2. Extract the contents to a new subfolder under "c:\program files\PHP", eg "c:\program files\PHP\v8.3.8".<br>
           3. Download and install <a href='https://github.com/phpmanager/phpmanager'>PHP Manager for IIS</a>. Open the tool within IIS and select the binary file from the new directory.<br>
-          4. Open command prompt and type 'php -v'. If you still have the old version then go to the 'Enviroment Variables' and edit the 'Path', update the PHP entry to the new folder. Reboot Windows.<br>
+          4. Open command prompt and type 'php -v'. If you still have the old version then go to the 'Environment Variables' and edit the 'Path', update the PHP entry to the new folder. Reboot Windows.<br>
           5. Delete the old PHP folder.<br>
+					<br>
+		<img src=upgradePHP02.png class=ImageMain>
+		<div class=ImageCaption>↑ We access 'PHP Manager' via IIS.</div>
+		<br>
+					<br>
+		<img src=upgradePHP01.png class=ImageMain>
+		<div class=ImageCaption>↑ We can then register a new PHP version.</div>
+		<br>
 
 	<br>
 	
