--- a/upgradePHP.html
+++ b/upgradePHP.html
@@ -148,7 +148,10 @@ To upgrade PHP on Windows you need to do the following:<br>
 		<img src=upgradePHP01.png class=ImageMain>
 		<div class=ImageCaption>↑ We can then register a new PHP version.</div>
 		<br>
-
+					<br>
+		<img src=upgradePHP03.png class=ImageMain>
+		<div class=ImageCaption>↑ We update the Path variable and reboot.</div>
+		<br>
 	<br>
 	
           </div>
