--- a/postfixRelay.html
+++ b/postfixRelay.html
@@ -210,7 +210,7 @@ smtpd_tls_session_cache_database = btree:${data_directory}/smtpd_scache
 		<img src=postfixRelay04.png style='border: 5px solid #564c4d;'>
 		<div class=ImageCaption>↑ ESMTPS means the email was encrypted from the app server to Postfix.</div>
 		<br>	
-		Some commands that help administering Ubuntu and Postfix:<br>
+		Some commands that help administer Ubuntu and Postfix:<br>
 			 <div class=code>
 		postfix reload  # restart the Postfix service<br>
 		postfix logrotate  # saves off the existing postfix.log and creates a new log<br>
