--- a/postfixRelay.html
+++ b/postfixRelay.html
@@ -213,10 +213,10 @@ smtpd_tls_session_cache_database = btree:${data_directory}/smtpd_scache<br>
 		<br>	
 		Some commands that help administer Ubuntu and Postfix:<br>
 			 <div class=code>
-		postfix reload  # restart the Postfix service<br>
-		postfix logrotate  # saves off the existing postfix.log and creates a new log<br>
-		sudo reboot  # reboot the server, needed after some config changes<br>
-		setxkbmap gb  # set keyboard to UK, unfortunately doesn't stick after reboot<br>
+		postfix reload  <i># restart the Postfix service</i><br>
+		postfix logrotate  <i># saves off the existing postfix.log and creates a new log</i><br>
+		sudo reboot  <i># reboot the server, needed after some config changes</i><br>
+		setxkbmap gb  <i># set keyboard to UK, unfortunately doesn't stick after reboot</i><br>
           </div>
 		<br>
 <br>
