--- a/postfixRelay.html
+++ b/postfixRelay.html
@@ -220,6 +220,8 @@ smtpd_tls_session_cache_database = btree:${data_directory}/smtpd_scache<br>
           </div>
 		<br>
 <br>
+		References: <a href='https://secopsmonkey.com/better-mail-relaying-postfix-through-office-365.html'>https://secopsmonkey.com/better-mail-relaying-postfix-through-office-365.html</a><br>
+		<br>
           </td>
          
         </td></tr>
