--- a/postfixRelay.html
+++ b/postfixRelay.html
@@ -244,7 +244,7 @@ smtpd_tls_session_cache_database = btree:${data_directory}/smtpd_scache<br>
 
           </div>
 <br>
-		Full config file main.ch:<br>
+		Full config file main.cf:<br>
 		<div class=code>
 # General<br>
 # =======<br>
