--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
+	  <details>
 		  <b>2024</b><br>
+	  <a href="installExchange2019.html" class=two>Installing Exchange 2019 in Azure Landing Zone</a><br>
 	  <a href="upgradePHP.html" class=two>Upgrading PHP on Windows</a><br>
 	  <a href="postfixRelay.html" class=two>Adding a Postfix server for relay to O365</a><br>
 	  <a href="integratedApps.html" class=two>O365 Integrated Apps troubleshooting</a><br>
@@ -97,7 +99,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
     <a href="outlookFolders.html" class=two>Outlook folders keep moving sort order</a><br>
     <a href="runbooks.html" class=two>Teams report uploading to SharePoint with Runbooks</a><br>
 	  <a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS cmd as App</a><br>
-	  
+	  </details>
 	  <details>
 
     <summary><b>2023</b><br></summary>
@@ -134,6 +136,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <div class=headline>Articles</div>
 	      <table class=indexTable> 
 		      <br>
+	<tr><td><a href="installExchange2019.html" class=two>Installing Exchange 2019 in Azure Landing Zone</a><br></td><td>15-Jun-24</td></tr>
 	<tr><td><a href="upgradePHP.html" class=two>Upgrading PHP on Windows</a><br></td><td>10-Jun-24</td></tr>
 	<tr><td><a href="postfixRelay.html" class=two>Adding a Postfix server for relay to O365</a><br></td><td>08-Jun-24</td></tr>
 	<tr><td><a href="integratedApps.html" class=two>O365 Integrated Apps troubleshooting</a><br></td><td>28-May-24</td></tr>
