--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
-	  <details>
-		  <b>2024</b><br>
+	  <details open>
+		    <summary><b>2024/b><br></summary>
 	  <a href="installExchange2019.html" class=two>Installing Exchange 2019 in Azure Landing Zone</a><br>
 	  <a href="upgradePHP.html" class=two>Upgrading PHP on Windows</a><br>
 	  <a href="postfixRelay.html" class=two>Adding a Postfix server for relay to O365</a><br>
