--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <details open>
 		    <summary><b>2024</b><br></summary>
+	<a href="postfixConfig.html" class=two>Advanced Postfix configuration</a><br>
 	  <a href="installExchange2019.html" class=two>Installing Exchange 2019 in Azure Landing Zone</a><br>
 	  <a href="upgradePHP.html" class=two>Upgrading PHP on Windows</a><br>
 	  <a href="postfixRelay.html" class=two>Adding a Postfix server for relay to O365</a><br>
@@ -136,6 +137,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <div class=headline>Articles</div>
 	      <table class=indexTable> 
 		      <br>
+	<tr><td><a href="postfixConfig.html" class=two>Advanced Postfix configuration</a><br></td><td>17-Jun-24</td></tr>
 	<tr><td><a href="installExchange2019.html" class=two>Installing Exchange 2019 in Azure Landing Zone</a><br></td><td>15-Jun-24</td></tr>
 	<tr><td><a href="upgradePHP.html" class=two>Upgrading PHP on Windows</a><br></td><td>10-Jun-24</td></tr>
 	<tr><td><a href="postfixRelay.html" class=two>Adding a Postfix server for relay to O365</a><br></td><td>08-Jun-24</td></tr>
